fix: align sales document customer form layout

--- a/frontend/src/app/pages/muhasebe/satis-belgeleri/satis-belgeleri.component.scss
+++ b/frontend/src/app/pages/muhasebe/satis-belgeleri/satis-belgeleri.component.scss
@@ -101,6 +101,10 @@
       flex-wrap: wrap;
     }
 
+    .cari-toggle-row--compact {
+      justify-content: flex-start;
+    }
+
     .cari-toggle-row--start {
       justify-content: flex-start;
     }
